# gRPC_rust

./: Cargo.toml  Readme.md  build.rs
proto/: greeter.proto
src/: client.rs  server.rs
